--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jackson.serialization.write_dates_as_timestamps=false
 
 # Context path
 server.contextPath=/api
+
+# Logging Level
+logging.level.* = DEBUG
