--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,10 @@
 			<artifactId>rxjava</artifactId>
 			<version>1.3.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-jpamodelgen</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
