--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ server.contextPath=/api
 
 # Logging Level
 logging.level.* = DEBUG
+
+
+# Direction API key
+google.api.key=AIzaSyAKg7TLHo7dPMhEWQEI_FfuzzvYgi1yp6o
