--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,15 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- TESTS -->
+		<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+
 		<!-- DATES PARSING -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
