--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,5 @@ server.contextPath=/api
 # Logging Level
 logging.level.* = DEBUG
 
-
-# Direction API key
-google.api.key=AIzaSyAKg7TLHo7dPMhEWQEI_FfuzzvYgi1yp6o
+# MailJet sender
+mailjet.sender=alexandre.behaghel@club-internet.fr
