use of mysql db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,17 @@ spring.datasource.url = @jdbc.url@
 spring.datasource.driver-class-name = @jdbc.driver@
 spring.datasource.username = @jdbc.username@
 spring.datasource.password = @jdbc.password@
+spring.datasource.tomcat.max-active=2
+spring.datasource.tomcat.max-idle=2
+spring.datasource.tomcat.test-on-borrow=true
+spring.datasource.tomcat.validationQuery=SELECT 1
+
 spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+
 
 # JACKSON
 spring.jackson.serialization.write_dates_as_timestamps=false
