--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
 			<version>4.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -155,28 +160,26 @@
 				<dependency>
 					<groupId>com.h2database</groupId>
 					<artifactId>h2</artifactId>
-					<version>1.4.196</version>
 					<scope>runtime</scope>
 				</dependency>
 			</dependencies>
 		</profile>
 		<profile>
-			<id>mariaDb</id>
+			<id>mysql</id>
 			<activation>
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
-				<profil>mariaDb</profil>
-				<jdbc.driver>org.mariadb.jdbc.Driver</jdbc.driver>
-				<jdbc.url>jdbc:mariadb://localhost:3306/top_collegues</jdbc.url>
-				<jdbc.username>root</jdbc.username>
-				<jdbc.password></jdbc.password>
+				<profil>mysql</profil>
+				<jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
+				<jdbc.url>jdbc:mysql://bgy5ke6ml-mysql.services.clever-cloud.com:3306/bgy5ke6ml</jdbc.url>
+				<jdbc.username>upat8fzq2xmvf4jn</jdbc.username>
+				<jdbc.password>EKAki0nBxObQK4ldVbW</jdbc.password>
 			</properties>
 			<dependencies>
 				<dependency>
-					<groupId>org.mariadb.jdbc</groupId>
-					<artifactId>mariadb-java-client</artifactId>
-					<scope>runtime</scope>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
