--- a/pom.xml
+++ b/pom.xml
@@ -172,9 +172,9 @@
 			<properties>
 				<profil>mysql</profil>
 				<jdbc.driver>com.mysql.jdbc.Driver</jdbc.driver>
-				<jdbc.url>jdbc:mysql://bgy5ke6ml-mysql.services.clever-cloud.com:3306/bgy5ke6ml</jdbc.url>
-				<jdbc.username>upat8fzq2xmvf4jn</jdbc.username>
-				<jdbc.password>EKAki0nBxObQK4ldVbW</jdbc.password>
+				<jdbc.url>mysql://urdzxzw8wlyuxkbe:k4Pm0UsU6hCmsMpkwigX@blj3tfv12f3zoxj2winf-mysql.services.clever-cloud.com:3306/blj3tfv12f3zoxj2winf</jdbc.url>
+				<jdbc.username>urdzxzw8wlyuxkbe</jdbc.username>
+				<jdbc.password>k4Pm0UsU6hCmsMpkwigX</jdbc.password>
 			</properties>
 			<dependencies>
 				<dependency>
