add config mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.tomcat.validationQuery=SELECT 1
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database=mysql
 
 # JACKSON
 spring.jackson.serialization.write_dates_as_timestamps=false
